# docs-chatbot

./: .env.example  .gitignore  AI_README.md  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
data/index/: default.json
data/processed/: chunks.json  docs.json  sample_chunks.json
data/raw/: experience.md  projects.md
docs/: integration.md
documents/: README.md
scripts/: activate_venv.ps1  build_corpus.py  build_index.py  chunk.py  ingest.py
src/docs_chatbot_service/: main.py
src/docs_chatbot_service/api/: app.py
src/docs_chatbot_service/core/: chat_log_store.py  chunking.py  indexer.py  ingest.py  models.py  search.py  service.py  storage.py  text.py
src/docs_chatbot_service/schemas/: contracts.py
tests/: __init__.py  test_api_contracts.py  test_chunking.py  test_corpora_api.py  test_ingest.py  test_query_nlp.py  test_retrieval_service.py
