[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-chatbot-service"
version = "0.2.0"
description = "Standalone retrieval-first docs chatbot backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.1",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
